[gd_scene load_steps=25 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://sprite/блоки/background/sky-export.png" type="Texture" id=2]
[ext_resource path="res://sprite/back_arrow_14429.png" type="Texture" id=3]
[ext_resource path="res://sprite/play_button_icon_129542.png" type="Texture" id=4]
[ext_resource path="res://sprite/блоки/background/mountain2-export.png" type="Texture" id=5]
[ext_resource path="res://sprite/блоки/background/pine1-export.png" type="Texture" id=6]
[ext_resource path="res://sprite/блоки/background/cloud-export.png" type="Texture" id=7]
[ext_resource path="res://sprite/Перс.png" type="Texture" id=8]
[ext_resource path="res://sprite/Settings.png" type="Texture" id=9]
[ext_resource path="res://sprite/Shop.png" type="Texture" id=10]
[ext_resource path="res://kybki.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprite/LittleShop.png" type="Texture" id=12]
[ext_resource path="res://кнопки/Sprite-0002.png" type="Texture" id=13]
[ext_resource path="res://sprite/LittleSettings.png" type="Texture" id=14]
[ext_resource path="res://sprite/LittleCharacters.png" type="Texture" id=15]
[ext_resource path="res://sprite/LittleBack.png" type="Texture" id=16]
[ext_resource path="res://sprite/блоки/background/pine2-export.png" type="Texture" id=17]
[ext_resource path="res://muz/mechanic-button-pressing_fj_hbhno.mp3" type="AudioStream" id=18]
[ext_resource path="res://sprite/MonedaD.png" type="Texture" id=19]
[ext_resource path="res://sprite/MonedaD — копия-export.png" type="Texture" id=20]
[ext_resource path="res://ШРИФТ/new_dynamicfont.tres" type="DynamicFont" id=21]
[ext_resource path="res://sprite/VМонеты/красные_монеты.png" type="Texture" id=22]
[ext_resource path="res://sprite/VМонеты/синие_монеты.png" type="Texture" id=23]
[ext_resource path="res://sprite/VМонеты/гемы.png" type="Texture" id=24]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = -1.0
rect_scale = Vector2( 1, 1.00151 )
script = ExtResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="Sky-export" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 2 )

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 400, 265 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 5 )

[node name="Pine1-export" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 417, 360 )
scale = Vector2( 0.119767, 0.0976353 )
texture = ExtResource( 6 )

[node name="Pine2-export" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 408, 394 )
scale = Vector2( 0.121512, 0.0562814 )
texture = ExtResource( 17 )

[node name="Cloud-export" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 7 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sky-export" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 400, 212 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 5 )

[node name="Pine2-export" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 397, 328 )
scale = Vector2( 0.119739, 0.0906116 )
texture = ExtResource( 17 )

[node name="Pine1-export" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 378, 361 )
scale = Vector2( 0.114432, 0.075169 )
texture = ExtResource( 6 )

[node name="Cloud-export2" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 405, 95 )
scale = Vector2( 0.133456, 0.133456 )
texture = ExtResource( 7 )

[node name="Cloud-export" type="Sprite" parent="StaticBody2D2"]
visible = false
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="NewGame" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -68.5
margin_right = 67.5
margin_bottom = 68.5
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="Settings" type="TextureButton" parent="."]
margin_left = 696.0
margin_top = 305.539
margin_right = 781.0
margin_bottom = 390.539
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )
expand = true

[node name="Characters" type="TextureButton" parent="."]
margin_left = 217.0
margin_top = 145.78
margin_right = 317.0
margin_bottom = 245.78
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="Exit" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 317.0
margin_right = 83.0
margin_bottom = 390.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 16 )
expand = true

[node name="Shop" type="TextureButton" parent="."]
margin_left = 493.0
margin_top = 148.775
margin_right = 593.0
margin_bottom = 248.775
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="BUTTON" type="AudioStreamPlayer" parent="." groups=["кнопка"]]
stream = ExtResource( 18 )
__meta__ = {
"_editor_description_": ""
}

[node name="Control" parent="." instance=ExtResource( 11 )]
margin_left = 11.0
margin_top = -26.9593
margin_right = 11.0
margin_bottom = -329.959

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 187, 40.9382 )
scale = Vector2( 0.240744, 0.240744 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
region_enabled = true
region_rect = Rect2( 0, 0, 167.297, 157.771 )

[node name="КрасныеМонеты" type="Sprite" parent="."]
position = Vector2( 319, 40.9382 )
scale = Vector2( 0.241, 0.241 )
texture = ExtResource( 22 )

[node name="Label" type="Label" parent="."]
margin_left = 499.0
margin_top = 16.9744
margin_right = 539.0
margin_bottom = 58.9744
custom_fonts/font = ExtResource( 21 )
text = "0"

[node name="СиниеМонеты" type="Sprite" parent="."]
position = Vector2( 466, 40.9382 )
scale = Vector2( 0.241, 0.241 )
texture = ExtResource( 23 )

[node name="Label2" type="Label" parent="."]
margin_left = 358.0
margin_top = 17.9729
margin_right = 398.0
margin_bottom = 59.9729
custom_fonts/font = ExtResource( 21 )
text = "0"

[node name="Гемы" type="Sprite" parent="."]
position = Vector2( 604, 40.9382 )
scale = Vector2( 0.241, 0.241 )
texture = ExtResource( 24 )

[node name="Label3" type="Label" parent="."]
margin_left = 639.0
margin_top = 18.9714
margin_right = 679.0
margin_bottom = 60.9714
custom_fonts/font = ExtResource( 21 )
text = "0"

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Characters" to="." method="_on_Characters_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
